# string2map

./: .clang-format  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  azure-pipelines.yml  project-base.json  string2map.sln  string2map.vcxproj  string2map.vcxproj.filters  vcpkg.json
.azure/: az-build-linux.yml  az-build-windows.yml  az-cleanup-linux.yml  az-cleanup-windows.yml  az-posttest-linux.yml  az-pretest-linux.yml  az-pretest-windows.yml  az-publish-github.yml  az-publish-nuget.yml
.ci/: az-build-windows.yml  pipeline_detect_vs_path.bat
.gitea/: QUICK_REFERENCE.md  README.md  docker-compose.yml  setup-runner.bat  setup-runner.sh
.gitea/workflows/: build.yml
.github/workflows/: build.yml  codeql-analysis.yml
include/siddiqsoft/: string2map.hpp  string2vector.hpp
nuget/: SiddiqSoft.string2map.nuspec
pack/: CMakeCommonHelpers.cmake  SiddiqSoft.string2map.nuspec
src/: string2map.cpp  string2map.h  string2map.hpp  string2vector.hpp
tests/: CMakeLists.txt  test.cpp  test_string2map.cpp  test_string2vector.cpp  tests.vcxproj
